fix: icon exists checks file resource and content [DHIS2-16872] (#16934)
* fix: icon exists checks file resource and content [DHIS2-16872]

* chore: revert error handling in controller

* fix: error handling and tests

* fix: handle icon image disconnect as 404 [DHIS2-16872]

* fix: test dependencies

* fix: sonar warnings and convert mock to integration tests

* fix: implement missing tests

* fix: limit page and pageSize inputs [DHIS2-16872]

* feat: auto-repair orphan default icons