@@ -27,19 +27,24 @@
  */
 package org.hisp.dhis.icon;
 
+import static java.util.stream.Collectors.toUnmodifiableSet;
 import static org.hisp.dhis.fileresource.FileResourceDomain.ICON;
+import static org.hisp.dhis.util.DateUtils.dateTimeIsValid;
+import static org.hisp.dhis.util.DateUtils.toLongDate;
 
 import com.google.common.base.Strings;
 import java.io.IOException;
 import java.io.InputStream;
-import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Date;
+import java.util.EnumMap;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import javax.annotation.CheckForNull;
 import javax.annotation.Nonnull;
 import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.common.CodeGenerator;
@@ -47,10 +52,12 @@ import org.hisp.dhis.feedback.BadRequestException;
 import org.hisp.dhis.feedback.ConflictException;
 import org.hisp.dhis.feedback.NotFoundException;
 import org.hisp.dhis.fileresource.FileResource;
+import org.hisp.dhis.fileresource.FileResourceContentStore;
 import org.hisp.dhis.fileresource.FileResourceService;
 import org.hisp.dhis.user.CurrentUserUtil;
 import org.hisp.dhis.user.User;
 import org.hisp.dhis.user.UserService;
+import org.hisp.dhis.webapi.controller.event.webrequest.OrderCriteria;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
@@ -63,30 +70,31 @@ import org.springframework.transaction.annotation.Transactional;
 @Service("org.hisp.dhis.icon.IconService")
 public class DefaultIconService implements IconService {
 
-  private static final String CUSTOM_ICON_KEY_PATTERN = "^[a-zA-Z0-9_+-]+$";
-
-  private static final Pattern pattern = Pattern.compile(CUSTOM_ICON_KEY_PATTERN);
+  private static final String ICON_KEY_PATTERN_REGEX = "^[a-zA-Z0-9_+-]+$";
+  private static final Pattern ICON_KEY_PATTERN = Pattern.compile(ICON_KEY_PATTERN_REGEX);
 
   private static final String ICON_PATH = "SVGs";
   private static final String MEDIA_TYPE_SVG = "image/svg+xml";
 
   private final IconStore iconStore;
   private final FileResourceService fileResourceService;
+  private final FileResourceContentStore fileResourceContentStore;
   private final UserService userService;
 
   private final Set<DefaultIcon> ignoredAfterFailure = ConcurrentHashMap.newKeySet();
 
+  @Nonnull
   @Override
   @Transactional(readOnly = true)
-  public List<Icon> findNonExistingDefaultIcons() {
+  public Map<DefaultIcon, List<AddIconRequest>> findNonExistingDefaultIcons() {
     Set<String> existingKeys = Set.copyOf(iconStore.getAllKeys());
-    List<Icon> missingIcons = new ArrayList<>();
-    for (DefaultIcon icon : DefaultIcon.values()) {
-      if (!ignoredAfterFailure.contains(icon)
-          && icon.getVariantKeys().stream().anyMatch(key -> !existingKeys.contains(key))) {
-        for (Icon i : icon.toVariantIcons()) {
-          if (!existingKeys.contains(i.getKey())) {
-            missingIcons.add(i);
+    Map<DefaultIcon, List<AddIconRequest>> missingIcons = new EnumMap<>(DefaultIcon.class);
+    for (DefaultIcon origin : DefaultIcon.values()) {
+      if (!ignoredAfterFailure.contains(origin)
+          && origin.getVariantKeys().stream().anyMatch(key -> !existingKeys.contains(key))) {
+        for (AddIconRequest add : origin.toVariantIcons()) {
+          if (!existingKeys.contains(add.getKey())) {
+            missingIcons.computeIfAbsent(origin, key -> new ArrayList<>(3)).add(add);
           }
         }
       }
@@ -94,121 +102,147 @@ public class DefaultIconService implements IconService {
     return missingIcons;
   }
 
+  @Nonnull
   @Override
   @Transactional
-  public String uploadDefaultIcon(Icon icon) throws ConflictException {
+  public String addDefaultIconImage(@Nonnull String key, @Nonnull DefaultIcon origin)
+      throws ConflictException {
     String fileResourceId = CodeGenerator.generateUid();
-    Resource resource = getDefaultIconResource(icon.getKey());
+    Resource resource = getDefaultIconResource(key);
     try {
-      FileResource fileResource = FileResource.ofKey(ICON, icon.getKey(), MEDIA_TYPE_SVG);
-      fileResource.setUid(fileResourceId);
-      fileResource.setAssigned(true);
+      FileResource fr = FileResource.ofKey(ICON, key, MEDIA_TYPE_SVG);
+      fr.setUid(fileResourceId);
+      fr.setAssigned(true);
       try (InputStream image = resource.getInputStream()) {
-        fileResourceService.syncSaveFileResource(fileResource, image);
+        fileResourceService.syncSaveFileResource(fr, image);
       }
-      icon.setFileResource(fileResource);
       return fileResourceId;
     } catch (IOException ex) {
-      ignoredAfterFailure.add(icon.getOrigin());
+      ignoredAfterFailure.add(origin);
       throw new ConflictException("Failed to create default icon resource: " + ex.getMessage());
     }
   }
 
+  private static Resource getDefaultIconResource(String key) {
+    return new ClassPathResource(String.format("%s/%s.%s", ICON_PATH, key, DefaultIcon.SUFFIX));
+  }
+
+  @Nonnull
   @Override
   @Transactional(readOnly = true)
-  public List<Icon> getIcons(IconQueryParams params) {
+  public List<Icon> getIcons(@Nonnull IconQueryParams params) throws BadRequestException {
+    validateQuery(params);
     return iconStore.getIcons(params);
   }
 
   @Override
   @Transactional(readOnly = true)
-  public long count(IconQueryParams params) {
+  public long count(@Nonnull IconQueryParams params) throws BadRequestException {
+    validateQuery(params);
     return iconStore.count(params);
   }
 
+  @Nonnull
   @Override
   @Transactional(readOnly = true)
-  public Icon getIcon(String key) throws NotFoundException {
+  public Icon getIcon(@Nonnull String key) throws NotFoundException {
     Icon icon = iconStore.getIconByKey(key);
-    if (icon == null) {
-      throw new NotFoundException(String.format("Icon not found: %s", key));
-    }
-
+    if (icon == null) throw new NotFoundException(Icon.class, key);
+    FileResource image = icon.getFileResource();
+    if (image == null) throw new NotFoundException(Icon.class, key);
+    if (!fileResourceContentStore.fileResourceContentExists(image.getStorageKey()))
+      throw new NotFoundException(Icon.class, key);
     return icon;
   }
 
   @Override
   @Transactional(readOnly = true)
-  public boolean iconExists(String key) {
-    return iconStore.getIconByKey(key) != null;
+  public boolean iconExists(@Nonnull String key) {
+    try {
+      return getIcon(key) != null;
+    } catch (NotFoundException ex) {
+      return false;
+    }
   }
 
+  @Nonnull
   @Override
-  @Transactional
-  public void addIcon(@Nonnull Icon icon)
-      throws BadRequestException, NotFoundException, SQLException {
+  public Icon addIcon(@Nonnull AddIconRequest request, @CheckForNull DefaultIcon origin)
+      throws BadRequestException, NotFoundException {
+    validateIconKey(request.getKey());
+    validateIconDoesNotExists(request.getKey());
 
-    if (icon.getOrigin() == null && !icon.isCustom()) {
-      throw new BadRequestException("Not allowed to create default icon");
-    }
+    String fileResourceId = request.getFileResourceId();
+    FileResource image = fileResourceService.getFileResource(fileResourceId);
+    if (image == null) throw new NotFoundException(FileResource.class, fileResourceId);
+    if (!fileResourceContentStore.fileResourceContentExists(image.getStorageKey()))
+      throw new NotFoundException(FileResource.class, fileResourceId);
 
-    validateIconDoesNotExists(icon);
-    validateIconKey(icon.getKey());
+    image.setAssigned(true);
+    fileResourceService.updateFileResource(image);
 
-    if (icon.getFileResource() != null) {
-      FileResource fileResource = getFileResource(icon.getFileResource().getUid());
-      fileResource.setAssigned(true);
-      fileResourceService.updateFileResource(fileResource);
-    }
+    Icon icon = new Icon();
+    icon.setKey(request.getKey());
+    icon.setDescription(request.getDescription());
+    icon.setKeywords(request.getKeywords());
+    icon.setCustom(origin == null);
+    icon.setFileResource(image);
 
     User currentUser = userService.getUserByUsername(CurrentUserUtil.getCurrentUsername());
     if (currentUser != null) {
       icon.setCreatedBy(currentUser);
     }
 
-    if (icon.getKeywords() == null) {
-      icon.setKeywords(Set.of());
-    }
-
     icon.setAutoFields();
     iconStore.save(icon);
+    return icon;
   }
 
   @Override
   @Transactional
-  public void updateIcon(@Nonnull Icon icon) throws BadRequestException, SQLException {
-    if (!icon.isCustom()) {
-      throw new BadRequestException("Not allowed to update default icon");
-    }
+  public void updateIcon(@Nonnull String key, @Nonnull UpdateIconRequest request)
+      throws BadRequestException, NotFoundException {
+    Icon icon = getModifiableIcon(key, "Not allowed to update default icon");
 
-    validateIconKeyNotNullOrEmpty(icon.getKey());
-
-    if (icon.getKeywords() == null) {
-      icon.setKeywords(Set.of());
-    }
-
+    icon.setDescription(request.getDescription());
+    icon.setKeywords(request.getKeywords());
     icon.setAutoFields();
+
     iconStore.update(icon);
   }
 
   @Override
   @Transactional
-  public void deleteIcon(String key) throws BadRequestException, NotFoundException {
-    Icon icon = validateIconExists(key);
+  public void deleteIcon(@Nonnull String key) throws BadRequestException, NotFoundException {
+    Icon icon = getModifiableIcon(key, "Not allowed to delete default icon");
 
-    if (!icon.isCustom()) {
-      throw new BadRequestException("Not allowed to delete default icon");
+    FileResource image = icon.getFileResource();
+    if (image != null) {
+      image.setAssigned(false);
+      fileResourceService.updateFileResource(image);
     }
-
-    FileResource fileResource = getFileResource(icon.getFileResource().getUid());
-    fileResource.setAssigned(false);
-    fileResourceService.updateFileResource(fileResource);
-
     iconStore.delete(icon);
   }
 
+  @Override
+  @Transactional
+  public int deleteOrphanDefaultIcons() {
+    return iconStore.deleteOrphanDefaultIcons();
+  }
+
+  @Nonnull
+  private Icon getModifiableIcon(@Nonnull String key, String message)
+      throws NotFoundException, BadRequestException {
+    Icon icon = iconStore.getIconByKey(key);
+    if (icon == null) throw new NotFoundException(Icon.class, key);
+    if (!icon.isCustom()) throw new BadRequestException(message);
+    return icon;
+  }
+
   private void validateIconKey(String key) throws BadRequestException {
-    Matcher matcher = pattern.matcher(key.trim());
+    if (Strings.isNullOrEmpty(key)) throw new BadRequestException("Icon key not specified.");
+
+    Matcher matcher = ICON_KEY_PATTERN.matcher(key.trim());
 
     if (!matcher.matches()) {
       throw new BadRequestException(
@@ -218,51 +252,34 @@ public class DefaultIconService implements IconService {
     }
   }
 
-  private void validateIconDoesNotExists(Icon icon) throws BadRequestException {
-    if (icon == null) {
-      throw new BadRequestException("Icon cannot be null.");
-    }
-
-    validateIconDoesNotExists(icon.getKey());
-  }
-
   private void validateIconDoesNotExists(String key) throws BadRequestException {
-    validateIconKeyNotNullOrEmpty(key);
-
-    if (iconExists(key)) {
+    if (iconStore.getIconByKey(key) != null)
       throw new BadRequestException(String.format("Icon with key %s already exists.", key));
-    }
   }
 
-  private void validateIconKeyNotNullOrEmpty(String key) throws BadRequestException {
-    if (Strings.isNullOrEmpty(key)) {
-      throw new BadRequestException("Icon key not specified.");
-    }
+  private void validateQuery(IconQueryParams params) throws BadRequestException {
+    validateDate(params.getCreatedStartDate(), "createdStartDate %s is not valid");
+    validateDate(params.getCreatedEndDate(), "createdEndDate %s is not valid");
+    validateDate(params.getLastUpdatedStartDate(), "lastUpdatedStartDate %s is not valid");
+    validateDate(params.getLastUpdatedEndDate(), "lastUpdatedEndDate %s is not valid");
 
-    validateIconKey(key);
+    validateOrderBy(params);
   }
 
-  private FileResource getFileResource(String fileResourceUid)
-      throws BadRequestException, NotFoundException {
-    if (Strings.isNullOrEmpty(fileResourceUid)) {
-      throw new BadRequestException("FileResource id not specified.");
-    }
-
-    Optional<FileResource> fileResource =
-        fileResourceService.getFileResource(fileResourceUid, ICON);
-    if (fileResource.isEmpty()) {
-      throw new NotFoundException(String.format("FileResource %s does not exist", fileResourceUid));
-    }
-
-    return fileResource.get();
+  private static void validateOrderBy(IconQueryParams params) throws BadRequestException {
+    List<OrderCriteria> orders = params.getOrder();
+    if (orders == null || orders.isEmpty()) return;
+    Set<String> valid = Set.of("created", "lastUpdated", "key");
+    for (OrderCriteria order : orders)
+      if (!valid.contains(order.getField()))
+        throw new BadRequestException(
+            "Not a valid order property %s, valid are: %s".formatted(order.getField(), valid));
+    if (orders.stream().map(OrderCriteria::getField).collect(toUnmodifiableSet()).size()
+        < orders.size()) throw new BadRequestException("Cannot use same order more than once");
   }
 
-  private Icon validateIconExists(String key) throws NotFoundException, BadRequestException {
-    validateIconKeyNotNullOrEmpty(key);
-    return getIcon(key);
-  }
-
-  private static Resource getDefaultIconResource(String key) {
-    return new ClassPathResource(String.format("%s/%s.%s", ICON_PATH, key, DefaultIcon.SUFFIX));
+  private static void validateDate(Date date, String template) throws BadRequestException {
+    if (date != null && !dateTimeIsValid(toLongDate(date)))
+      throw new BadRequestException(String.format(template, date));
   }
 }
